--- a/crm-plugin/models/contact.settings.json
+++ b/crm-plugin/models/contact.settings.json
@@ -72,6 +72,10 @@
     "user": {
       "plugin": "users-permissions",
       "model": "user"
+    },
+    "tags": {
+      "via": "contacts",
+      "collection": "tag"
     }
   }
 }
