all generic models done

--- a/crm-plugin/models/individual.settings.json
+++ b/crm-plugin/models/individual.settings.json
@@ -11,7 +11,8 @@
   },
   "attributes": {
     "first_name": {
-      "type": "string"
+      "type": "string",
+      "required": true
     },
     "last_name": {
       "type": "string"
