--- a/crm-plugin/models/state.settings.json
+++ b/crm-plugin/models/state.settings.json
@@ -11,10 +11,12 @@
   },
   "attributes": {
     "name": {
-      "type": "string"
+      "type": "string",
+      "required": true
     },
     "is_active": {
       "type": "boolean",
+      "required": true,
       "default": true
     },
     "abbreviation": {
