--- a/crm-plugin/models/district.settings.json
+++ b/crm-plugin/models/district.settings.json
@@ -11,9 +11,11 @@
   },
   "attributes": {
     "name": {
-      "type": "string"
+      "type": "string",
+      "required": true
     },
     "is_active": {
+      "required": true,
       "type": "boolean",
       "default": true
     },
