--- a/crm-plugin/models/contact.settings.json
+++ b/crm-plugin/models/contact.settings.json
@@ -72,6 +72,11 @@
     "user": {
       "plugin": "users-permissions",
       "model": "user"
+    },
+    "activityassignee": {
+      "plugin": "crm-plugin",
+      "via": "contact",
+      "model": "activityassignee"
     }
   }
 }
