--- a/crm-plugin/models/tag.settings.json
+++ b/crm-plugin/models/tag.settings.json
@@ -14,10 +14,11 @@
       "type": "string",
       "required": true
     },
+    "description": {
+      "type": "text"
+    },
     "is_active": {
-      "type": "boolean",
-      "default": false,
-      "required": true
+      "type": "boolean"
     }
   }
 }
