Made chnages in realtion between tag and contacttag

--- a/crm-plugin/models/contacttag.settings.json
+++ b/crm-plugin/models/contacttag.settings.json
@@ -11,11 +11,13 @@
   "attributes": {
     "contact": {
       "plugin": "crm-plugin",
-      "model": "contact"
+      "model": "contact",
+      "via": "contacttag"
     },
     "tag": {
       "plugin": "crm-plugin",
-      "model": "tag"
+      "model": "tag",
+      "via": "contacttag"
     }
   }
 }
