Made changes to fields in tags and contacttag modle

--- a/crm-plugin/models/contacttag.settings.json
+++ b/crm-plugin/models/contacttag.settings.json
@@ -15,9 +15,9 @@
       "via": "contacttag"
     },
     "tag": {
+      "via": "contacttag",
       "plugin": "crm-plugin",
-      "model": "tag",
-      "via": "contacttag"
+      "model": "tag"
     }
   }
 }
