complete activity module

--- a/crm-plugin/models/activity.settings.json
+++ b/crm-plugin/models/activity.settings.json
@@ -28,10 +28,10 @@
       "model": "activitytype",
       "via": "activity"
     },
-    "activityassignee": {
+    "activityassignees": {
       "plugin": "crm-plugin",
       "via": "activity",
-      "model": "activityassignee"
+      "collection": "activityassignee"
     }
   }
 }
