--- a/crm-plugin/models/contact.settings.json
+++ b/crm-plugin/models/contact.settings.json
@@ -74,10 +74,10 @@
       "plugin": "users-permissions",
       "model": "user"
     },
-    "activityassignee": {
+    "activityassignees": {
       "plugin": "crm-plugin",
       "via": "contact",
-      "model": "activityassignee"
+      "collection": "activityassignee"
     },
     "contacttags": {
       "via": "contact",
