Changed district relation with state

--- a/models/district.settings.json
+++ b/models/district.settings.json
@@ -28,9 +28,8 @@
       "unique": true
     },
     "state": {
-      "plugin": "crm-plugin",
       "model": "state",
-      "via": "districts"
+      "plugin": "crm-plugin"
     },
     "villages": {
       "plugin": "crm-plugin",
