Revert "Changed district and state relation with village"
This reverts commit 1f6f9a3a5d8c52cf744c7d8c42f279289cf1ba2d.

--- a/models/village.settings.json
+++ b/models/village.settings.json
@@ -27,12 +27,14 @@
       "default": true
     },
     "state": {
-      "model": "state",
-      "plugin": "crm-plugin"
+      "via": "villages",
+      "plugin": "crm-plugin",
+      "model": "state"
     },
     "district": {
-      "model": "district",
-      "plugin": "crm-plugin"
+      "via": "villages",
+      "plugin": "crm-plugin",
+      "model": "district"
     },
     "contacts": {
       "via": "villages",
