Revert "Changed country relation with state"
This reverts commit 9a994f45f189fb5b61f01fb80faf1ae20a6d573c.

--- a/models/state.settings.json
+++ b/models/state.settings.json
@@ -38,8 +38,9 @@
       "via": "state"
     },
     "country": {
-      "model": "country",
-      "plugin": "crm-plugin"
+      "via": "states",
+      "plugin": "crm-plugin",
+      "model": "country"
     }
   }
 }
