Revert "Changed district relation with state"
This reverts commit 6a0fd02e42a98fe850f2f46efb81a8923260af6e.

--- a/models/district.settings.json
+++ b/models/district.settings.json
@@ -28,8 +28,9 @@
       "unique": true
     },
     "state": {
+      "plugin": "crm-plugin",
       "model": "state",
-      "plugin": "crm-plugin"
+      "via": "districts"
     },
     "villages": {
       "plugin": "crm-plugin",
