Revert "Changed village mant to many relation and user relation to has and"
This reverts commit adda933fbfe32bacc3eec145d7b0fdc86a672960.

--- a/models/contact.settings.json
+++ b/models/contact.settings.json
@@ -51,9 +51,11 @@
       "plugin": "crm-plugin",
       "model": "country"
     },
-    "village": {
+    "villages": {
       "plugin": "crm-plugin",
-      "model": "village"
+      "collection": "village",
+      "via": "contacts",
+      "dominant": true
     },
     "state": {
       "plugin": "crm-plugin",
@@ -70,18 +72,17 @@
     },
     "user": {
       "plugin": "users-permissions",
-      "model": "user",
-      "via": "contact"
+      "model": "user"
     },
     "activityassignees": {
       "plugin": "crm-plugin",
-      "collection": "activityassignee",
-      "via": "contact"
+      "via": "contact",
+      "collection": "activityassignee"
     },
     "contacttags": {
+      "via": "contact",
       "plugin": "crm-plugin",
-      "collection": "contacttag",
-      "via": "contact"
+      "collection": "contacttag"
     }
   }
 }
