--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,12 +6,33 @@ jobs:
     executor:
       name: node/default
     steps:
+      - run:
+        name: install-strapi
+        command: yarn create strapi-app crm-project
+      - run:
+        name: create-plugin-directory
+        command: mkdir -p crm-project/plugins
+      - run:
+        name: plugin-directory
+        command: cd crm-project/plugins
       - checkout
+      - run:
+        name: back-to-root
+        command: cd ~/crm-project
+      - run:
+        name: start-strapi
+        command: yarn start
+      - run:
+        name: crm-plugin-directory
+        command: cd crm-project/plugins/crm-plugin/
+      - run:
+        name: crm-plugin-directory
+        command: cp tests/integration/config/config.js.sample tests/integration/config/config.js
       - node/with-cache:
           steps:
-            - run: npm install
-            - run: npm test
+            - run: yarn install
+            - run: yarn test
 workflows:
-    build-and-test:
-      jobs:
-        - build-and-test
+  build-and-test:
+    jobs:
+      - build-and-test
