--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,24 +7,22 @@ jobs:
       name: node/default
     steps:
       - run:
-          name: Install Strapi Project
+          name: Create Strapi project
           command: yarn create strapi-app crm-project --quickstart --no-run
       - run:
-          name: Install Plugin
+          name: Install CRM plugin
           command: mkdir -p crm-project/plugins && cd crm-project/plugins
+      working_directory: ~/project/crm-project/plugins
       - checkout
       - run:
-          name: back-to-root
-          command: cd ~/crm-project
+          name: Rename the plugin folder
+          command: mv crmplatform crm-plugin
       - run:
-          name: start-strapi
-          command: yarn start
+          name: Start Strapi project
+          command: cd ~/project/crm-project && yarn start
       - run:
-          name: crm-plugin-directory
-          command: cd crm-project/plugins/crm-plugin/
-      - run:
-          name: crm-plugin-directory
-          command: cp tests/integration/config/config.js.sample tests/integration/config/config.js
+          name: Configure the plugin
+          command: cp plugins/crm-plugin/tests/integration/config/config.js.sample plugins/crm-plugin/tests/integration/config/config.js
       - node/with-cache:
           steps:
             - run: yarn install
