--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,9 @@ version: 2.1
 orbs:
   node: circleci/node@1.1.6
 jobs:
-  build-and-test:
+  setup-strapi:
     executor:
       name: node/default
-    working_directory: ~/project/crm-project/plugins
     steps:
       - run:
           name: Create Strapi project
@@ -13,6 +12,11 @@ jobs:
       - run:
           name: Install CRM plugin
           command: mkdir -p crm-project/plugins && cd crm-project/plugins
+  build-and-test:
+    executor:
+      name: node/default
+    working_directory: ~/project/crm-project/plugins
+    steps:
       - checkout
       - run:
           name: Rename the plugin folder
@@ -30,4 +34,5 @@ jobs:
 workflows:
   build-and-test:
     jobs:
+      - setup-strapi
       - build-and-test
