--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,20 +2,18 @@ version: 2.1
 orbs:
   node: circleci/node@1.1.6
 jobs:
-  setup-strapi:
+  build-and-test:
     executor:
       name: node/default
-    steps:
-      - run:
-          name: Create Strapi project
-          command: yarn create strapi-app crm-project --quickstart --no-run && mkdir -p crm-project/plugins && cd crm-project/plugins
-  build-and-test:
-    working_directory: ~/project/crm-project/plugins
+    working_directory: ~/project/crm-plugin
     steps:
       - checkout
       - run:
-          name: Rename the plugin folder
-          command: mv crmplatform crm-plugin
+          name: Create Strapi project
+          command: cd ~/project && yarn create strapi-app crm-project --quickstart --no-run
+      - run:
+          name: Install CRM plugin
+          command: mkdir -p crm-project/plugins && mv ~/project/crm-plugin crm-project/plugins/
       - run:
           name: Start Strapi project
           command: cd ~/project/crm-project && yarn start
@@ -29,7 +27,4 @@ jobs:
 workflows:
   build-and-test:
     jobs:
-      - setup-strapi
-      - build-and-test:
-          requires:
-            - setup-strapi
+      - build-and-test
