--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           command: cd ~/project && yarn create strapi-app crm-project --quickstart --no-run
       - run:
           name: Install CRM plugin
-          command: mkdir -p crm-project/plugins && mv ~/project/crm-plugin crm-project/plugins/
+          command: mkdir -p ~/project/crm-project/plugins && mv ~/project/crm-plugin ~/project/crm-project/plugins/
       - run:
           name: Start Strapi project
           command: cd ~/project/crm-project && yarn start
