updated the CI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,10 +16,12 @@ jobs:
           command: mkdir -p ~/project/crm-project/plugins && mv ~/project/crm-plugin ~/project/crm-project/plugins/
       - run:
           name: Start Strapi project
-          command: cd ~/project/crm-project && yarn start
+          # need to auto create admin user in strapi via command line before yarn start
+          #command: cd ~/project/crm-project && yarn start
       - run:
           name: Configure the plugin
-          command: cp plugins/crm-plugin/tests/integration/config/config.js.sample plugins/crm-plugin/tests/integration/config/config.js
+          # need to update config file with correct credentials
+          #command: cp plugins/crm-plugin/tests/integration/config/config.js.sample plugins/crm-plugin/tests/integration/config/config.js
       - node/with-cache:
           steps:
             - run: yarn install
