--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "devDependencies": {
     "co-supertest": "^0.0.10",
     "mocha": "^7.1.2",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "knex": "<0.20.0",
+    "pg": "latest"
   }
 }
