Bokkshelf config added

--- a/tests/integration/config/config.js.sample
+++ b/tests/integration/config/config.js.sample
@@ -4,3 +4,30 @@ module.exports = {
   JWT,
   SERVER_URL,
 };
+const knex = require("knex")({
+  client: "pg",
+  connection: {
+    host: "127.0.0.1",
+    port: "5432",
+    user: "postgres",
+    password: "root",
+    database: "newcrm",
+    // host: "${process.env.DATABASE_HOST || '127.0.0.1'}",
+    // port: "${process.env.DATABASE_PORT || 5432}",
+    // user: "${process.env.DATABASE_USERNAME || ''}",
+    // password: "${process.env.DATABASE_PASSWORD || ''}",
+    // database: "${process.env.DATABASE_NAME || 'strapi'}"
+  },
+});
+
+const bookshelf = require("bookshelf")(knex);
+
+bookshelf.model("contact", {
+  requireFetch: false,
+  tableName: "contacts",
+});
+module.exports = {
+  JWT,
+  SERVER_URL,
+  bookshelf,
+};
