activitytype relation changed.

--- a/models/activity.settings.json
+++ b/models/activity.settings.json
@@ -25,6 +25,7 @@
     },
     "activitytype": {
       "model": "activitytype",
+      "via": "activities",
       "plugin": "crm-plugin"
     },
     "activityassignees": {
