--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,21 +12,20 @@ jobs:
           name: Create Strapi project
           command: cd ~/project && yarn create strapi-app crm-project --quickstart --no-run
       - run:
-          name: Reload the demo DB
+          name: Load the demo DB
           command: cd ~/project/crm-project || cp -R ~/project/crm-plugin/tests/integration/testing_db/.tmp .
       - run:
           name: Install CRM plugin
           command: mkdir -p ~/project/crm-project/plugins && mv ~/project/crm-plugin ~/project/crm-project/plugins/
       - run:
           name: Start Strapi project
-          #need to auto create admin user in strapi via command line before yarn start
           command: cd ~/project/crm-project && yarn start &
       - run:
-          name: Configure the plugin
-          #need to update config file with correct credentials
+          name: Configure the plugin for testing
           command: cp ~/project/crm-project/plugins/crm-plugin/tests/integration/config/config.js.sample ~/project/crm-project/plugins/crm-plugin/tests/integration/config/config.js
       - node/with-cache:
           steps:
+            - run: cd ~/project/crm-project/plugins/crm-plugin/
             - run: yarn install
             - run: yarn test
 workflows:
