update ci configuration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,9 +23,10 @@ jobs:
       - run:
           name: Configure the plugin for testing
           command: cp ~/project/crm-project/plugins/crm-plugin/tests/integration/config/config.js.sample ~/project/crm-project/plugins/crm-plugin/tests/integration/config/config.js
-      - node/with-cache:
-          steps:
-            - run: cd ~/project/crm-project/plugins/crm-plugin/ || yarn install || yarn test
+      - run:
+          name: Install required packages and run the test
+          command: cd ~/project/crm-project/plugins/crm-plugin/ || yarn install || yarn test
+
 workflows:
   build-and-test:
     jobs:
