--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
           command: mkdir -p ~/project/crm-project/plugins && mv ~/project/crm-plugin ~/project/crm-project/plugins/
       - run:
           name: Start Strapi project
-          command: cd ~/project/crm-project && yarn start &
+          command: cd ~/project/crm-project && yarn develop &
       - run:
           name: Configure the plugin for testing
           command: cp ~/project/crm-project/plugins/crm-plugin/tests/integration/config/config.js.sample ~/project/crm-project/plugins/crm-plugin/tests/integration/config/config.js
