--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,11 +18,12 @@ jobs:
           name: Install CRM plugin
           command: mkdir -p ~/project/crm-project/plugins && mv ~/project/crm-plugin ~/project/crm-project/plugins/
       - run:
-          name: Start Strapi project
-          command: cd ~/project/crm-project && yarn develop &
-      - run:
           name: Configure the plugin for testing
           command: cp ~/project/crm-project/plugins/crm-plugin/tests/integration/config/config.js.sample ~/project/crm-project/plugins/crm-plugin/tests/integration/config/config.js
+      - run:
+          name: Start Strapi project
+          command: cd ~/project/crm-project && yarn develop
+          background: true
       - run:
           name: Install required packages and run the test
           command: cd ~/project/crm-project/plugins/crm-plugin/ && yarn install && yarn test
