--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,10 @@ jobs:
           command: cp ~/project/crm-project/plugins/crm-plugin/tests/integration/config/config.js.sample ~/project/crm-project/plugins/crm-plugin/tests/integration/config/config.js
       - run:
           name: Start Strapi project
-          command: cd ~/project/crm-project && yarn develop
+          command: cd ~/project/crm-project && yarn build
+      - run:
+          name: Start Strapi project
+          command: cd ~/project/crm-project && yarn start
           background: true
       - run:
           name: Install required packages and run the test
