--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,11 +22,15 @@ jobs:
           command: cp ~/project/crm-project/plugins/crm-plugin/tests/integration/config/config.js.sample ~/project/crm-project/plugins/crm-plugin/tests/integration/config/config.js
       - run:
           name: Start Strapi project
-          command: cd ~/project/crm-project && yarn build
-      - run:
-          name: Start Strapi project
-          command: cd ~/project/crm-project && yarn start
+          command: cd ~/project/crm-project && yarn develop
           background: true
+      # wait for the server to start responding. We expect Bad Request 400 once it starts listening.
+      # so override the shell and have the last command be the : { null } command to force exit code 0.
+      - run:
+          shell: /bin/sh
+          command: |
+            wget --retry-connrefused --waitretry=1 --read-timeout=20 --timeout=15 -t 10 http://localhost:1337/auth/local
+            :
       - run:
           name: Install required packages and run the test
           command: cd ~/project/crm-project/plugins/crm-plugin/ && yarn install && yarn test
