--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "description": "CRM plugin for the basic contact management."
   },
   "scripts": {
-    "test": "mocha tests/**/*.test.js"
+    "test": "mocha tests/**/*.test.js",
+    "coverage": "nyc --all yarn test"
   },
   "author": {
     "name": "Web Access",
@@ -26,8 +27,10 @@
   },
   "license": "AGPL-3.0",
   "devDependencies": {
+    "chai": "^4.2.0",
     "co-supertest": "^0.0.10",
     "mocha": "^7.1.2",
+    "nyc": "^15.0.1",
     "supertest": "^4.0.2"
   }
 }
