chai request implemented for activity test case

--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "mocha": "^7.1.2",
     "nyc": "^15.0.1",
     "supertest": "^4.0.2"
+  },
+  "dependencies": {
+    "chai-http": "^4.3.0"
   }
 }
