--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,9 @@ jobs:
           name: Create Strapi project
           command: cd ~/project && yarn create strapi-app crm-project --quickstart --no-run
       - run:
+          name: Build Strapi project
+          command: cd ~/project/crm-project && yarn build
+      - run:
           name: Load the demo DB
           command: cd ~/project/crm-project || cp -R ~/project/crm-plugin/tests/integration/testing_db/.tmp .
       - run:
