--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,11 @@ jobs:
           name: Create Strapi project
           command: cd ~/project && yarn create strapi-app crm-project --quickstart --no-run
       - run:
+          name: Enter project directory
+          command: cd ~/project/crm-project
+      - run:
           name: Build Strapi project
-          command: timeout 15s cd ~/project/crm-project && yarn build && yarn start
+          command: timeout 15s yarn build && yarn start
       - run:
           name: Load the demo DB
           command: cd ~/project/crm-project || cp -R ~/project/crm-plugin/tests/integration/testing_db/.tmp .
