circle ci updated

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,10 @@ jobs:
           command: cd ~/project/crm-project
       - run:
           name: Build Strapi project
-          command: timeout 15s yarn build && yarn start
+          command: yarn build
+      - run:
+          name: Start Strapi project
+          command: timeout 15s yarn start
       - run:
           name: Load the demo DB
           command: cd ~/project/crm-project || cp -R ~/project/crm-plugin/tests/integration/testing_db/.tmp .
