--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           command: cd ~/project/crm-project && yarn build
       - run:
           name: Start Strapi project
-          command: cd ~/project/crm-project && timelimit -t15 yarn start
+          command: cd ~/project/crm-project && timeout 20s --preserve-status yarn start
       - run:
           name: Load the demo DB
           command: cd ~/project/crm-project || cp -R ~/project/crm-plugin/tests/integration/testing_db/.tmp .
