--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           command: cd ~/project/crm-project && yarn build
       - run:
           name: Start Strapi project
-          command: cd ~/project/crm-project && yarn start
+          command: cd ~/project/crm-project && set -e && yarn start
           no_output_timeout: 20s
       - run:
           name: Load the demo DB
