--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,10 +14,9 @@ jobs:
       - run:
           name: Build Strapi project
           command: cd ~/project/crm-project && yarn build
-      - run: circleci step skip-build
+      - run:
           name: Start Strapi project
-          command: cd ~/project/crm-project && yarn start
-          no_output_timeout: 20s
+          command: cd ~/project/crm-project && timeout 10s yarn start || true
       - run:
           name: Load the demo DB
           command: cd ~/project/crm-project || cp -R ~/project/crm-plugin/tests/integration/testing_db/.tmp .
