--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,44 +1,13 @@
+# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
+# Use a package of configuration called an orb.
 orbs:
-  node: circleci/node@1.1.6
-jobs:
-  build-and-test:
-    executor:
-      name: node/default
-    working_directory: ~/project/crm-plugin
-    steps:
-      - checkout
-      - run:
-          name: Create Strapi project
-          command: cd ~/project && yarn create strapi-app crm-project --quickstart --no-run
-      - run:
-          name: Build Strapi project
-          command: cd ~/project/crm-project && yarn build
-      - run:
-          name: Load the demo DB
-          command: cd ~/project/crm-project || cp -R ~/project/crm-plugin/tests/integration/testing_db/.tmp .
-      - run:
-          name: Install CRM plugin
-          command: mkdir -p ~/project/crm-project/plugins && mv ~/project/crm-plugin ~/project/crm-project/plugins/
-      - run:
-          name: Configure the plugin for testing
-          command: cp ~/project/crm-project/plugins/crm-plugin/tests/integration/config/config.js.sample ~/project/crm-project/plugins/crm-plugin/tests/integration/config/config.js
-      - run:
-          name: Start Strapi project
-          command: cd ~/project/crm-project && yarn start
-          background: true
-      # wait for the server to start responding. We expect Bad Request 400 once it starts listening.
-      # so override the shell and have the last command be the : { null } command to force exit code 0.
-      - run:
-          shell: /bin/sh
-          command: |
-            wget --retry-connrefused --waitretry=1 --read-timeout=20 --timeout=15 -t 10 http://localhost:1337/auth/local
-            :
-      - run:
-          name: Install required packages and run the test
-          command: cd ~/project/crm-project/plugins/crm-plugin/ && yarn install && yarn test
-
+  # Declare a dependency on the welcome-orb
+  welcome: circleci/welcome-orb@0.4.1
+# Orchestrate or schedule a set of jobs
 workflows:
-  build-and-test:
+  # Name the workflow "welcome"
+  welcome:
+    # Run the welcome/run job in its own container
     jobs:
-      - build-and-test
+      - welcome/run
