--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,4 +10,34 @@ workflows:
   welcome:
     # Run the welcome/run job in its own container
     jobs:
-      - welcome/run
+      - checkout
+      - run:
+          name: Create Strapi project
+          command: cd ~/project && yarn create strapi-app crm-project --quickstart --no-run
+      - run:
+          name: Build Strapi project
+          command: cd ~/project/crm-project && yarn build
+      - run:
+          name: Load the demo DB
+          command: cd ~/project/crm-project || cp -R ~/project/crm-plugin/tests/integration/testing_db/.tmp .
+      - run:
+          name: Install CRM plugin
+          command: mkdir -p ~/project/crm-project/plugins && mv ~/project/crm-plugin ~/project/crm-project/plugins/
+      - run:
+          name: Configure the plugin for testing
+          command: cp ~/project/crm-project/plugins/crm-plugin/tests/integration/config/config.js.sample ~/project/crm-project/plugins/crm-plugin/tests/integration/config/config.js
+      - run:
+          name: Start Strapi project
+          command: cd ~/project/crm-project && yarn start
+          background: true
+      # wait for the server to start responding. We expect Bad Request 400 once it starts listening.
+      # so override the shell and have the last command be the : { null } command to force exit code 0.
+      - run:
+          shell: /bin/sh
+          command: |
+            wget --retry-connrefused --waitretry=1 --read-timeout=20 --timeout=15 -t 10 http://localhost:1337/auth/local
+            :
+      - run:
+          name: Install required packages and run the test
+          command: cd ~/project/crm-project/plugins/crm-plugin/ && yarn install && yarn test
+  
