--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,14 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
 orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
-# Orchestrate or schedule a set of jobs
-workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
-    jobs:
+  node: circleci/node@1.1.6
+jobs:
+  build-and-test:
+    executor:
+      name: node/default
+    working_directory: ~/project/crm-plugin
+    steps:
       - checkout
-       - run:
+      - run:
           name: Create Strapi project
           command: cd ~/project && yarn create strapi-app crm-project --quickstart --no-run
       - run:
@@ -40,3 +37,8 @@ workflows:
       - run:
           name: Install required packages and run the test
           command: cd ~/project/crm-project/plugins/crm-plugin/ && yarn install && yarn test
+
+workflows:
+  build-and-test:
+    jobs:
+      - build-and-test
