--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,15 +14,15 @@ jobs:
       - run:
           name: Build Strapi project
           command: cd ~/project/crm-project && yarn build
-      # - run:
-      #     name: Load the demo DB
-      #     command: cd ~/project/crm-project || cp -R ~/project/crm-plugin/tests/integration/testing_db/.tmp .
-      # - run:
-      #     name: Install CRM plugin
-      #     command: mkdir -p ~/project/crm-project/plugins && mv ~/project/crm-plugin ~/project/crm-project/plugins/
-      # - run:
-      #     name: Configure the plugin for testing
-      #     command: cp ~/project/crm-project/plugins/crm-plugin/tests/integration/config/config.js.sa~/project/crm-project/plugins/crm-plugin/tests/integration/config/config.js   
+      - run:
+          name: Load the demo DB
+          command: cd ~/project/crm-project || cp -R ~/project/crm-plugin/tests/integration/testing_db/.tmp .
+      - run:
+          name: Install CRM plugin
+          command: mkdir -p ~/project/crm-project/plugins && mv ~/project/crm-plugin ~/project/crm-project/plugins/
+      - run:
+          name: Configure the plugin for testing
+          command: cp ~/project/crm-project/plugins/crm-plugin/tests/integration/config/config.js.sample ~/project/crm-project/plugins/crm-plugin/tests/integration/config/config.js
       - run:
           name: Start Strapi project
           command: cd ~/project/crm-project && yarn start
