--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - checkout
       - run:
           name: Create Strapi project
-          command: cd ~/project && strapi new crm-project --quickstart --no-run
+          command: cd ~/project && yarn create strapi-app crm-project --quickstart --no-run
       - run:
           name: Build Strapi project
           command: cd ~/project/crm-project && yarn build
