--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           command: cd ~/project && yarn create strapi-app crm-project --quickstart --no-run
       - run:
           name: Load the demo DB
-          command: cd ~/project/crm-project || cp -R ~/project/crm-plugin/tests/integration/testing_db/.tmp .
+          command: cd ~/project/crm-project && cp -R ~/project/crm-plugin/tests/integration/testing_db/.tmp .
       - run:
           name: Install CRM plugin
           command: mkdir -p ~/project/crm-project/plugins && mv ~/project/crm-plugin ~/project/crm-project/plugins/
@@ -25,7 +25,7 @@ jobs:
           command: cp ~/project/crm-project/plugins/crm-plugin/tests/integration/config/config.js.sample ~/project/crm-project/plugins/crm-plugin/tests/integration/config/config.js
       - run:
           name: Install required packages and run the test
-          command: cd ~/project/crm-project/plugins/crm-plugin/ || yarn install || yarn test
+          command: cd ~/project/crm-project/plugins/crm-plugin/ && yarn install && yarn test
 
 workflows:
   build-and-test:
